# Netsim

./: CMakeLists.txt  README.md
include/: factory.hxx  nodes.hxx  package.hxx  storage_types.hxx  vertex_types.hxx
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  storage_types.cpp
test/: tests.cpp
